# grpc-rs

./: Cargo.toml
benchmark/: Cargo.toml
compiler/: Cargo.toml
health/: Cargo.toml
health/src/proto/protobuf/: health.rs
interop/: Cargo.toml
proto/: Cargo.toml
proto/src/proto/protobuf/example/: helloworld.rs  route_guide.rs
proto/src/proto/protobuf/google/rpc/: status.rs
proto/src/proto/protobuf/testing/: control.rs  empty.rs  messages.rs  payloads.rs  services.rs  stats.rs  test.rs
tests-and-examples/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: main.rs
