[package]
name = "xtask"
version = "0.1.0"
authors = ["Jay Lee <BusyJayLee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost-build = "0.7"
# Use an old enough version to make sure generated code with TiKV's fork.
# TODO: use latest one when TiKV's fork is updated
protoc-rust = "=2.8"

[patch.crates-io]
protoc-rust = { git = "https://github.com/shawgerj/rust-protobuf", branch = "v2.8" }
protobuf = { git = "https://github.com/shawgerj/rust-protobuf", branch = "v2.8" }
protobuf-codegen = { git = "https://github.com/shawgerj/rust-protobuf", branch = "v2.8" }
#protobuf-build = { git = "https://github.com/shawgerj/protobuf-build", branch = "v0.14.1-patched" }
